- Remove redundant HTML classes. - Leave line breaks in <pre>s literal.  Works better with IE. - Minor documentation updates and corrections.
git-svn-id: svn://svn.code.sf.net/p/naturaldocs/code/trunk@872 6b081834-2649-4b4f-abbc-426aeab4333c

--- a/NaturalDocs/Styles/Default.css
+++ b/NaturalDocs/Styles/Default.css
@@ -330,15 +330,17 @@ blockquote {
         overflow: visible;
         }
 
-    .CHeading {
+    .CBody h1 {
         font-weight: bold; font-size: 10pt;
-        margin-top: 1.5em; margin-bottom: .5em }
-
-    .CCode {
-        font: 10pt "Courier New", Courier, monospace;
+        margin: 1.5em 0 .5em 0;
         }
 
-    .CBulletList {
+    .CBody pre {
+        font: 10pt "Courier New", Courier, monospace;
+        margin: 1em 0;
+        }
+
+    .CBody ul {
         /*  I don't know why CBody's margin doesn't apply, but it's consistent across browsers so whatever.
              Reapply it here as padding.  */
         padding-left: 15px; padding-right: 15px;
